tests/bugs/strict_statement_end_305.sy
start :: fn do
    (1)1
end
// error: @2
